--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.1 <3.0.0"
+  sdk: ">=2.12.1 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,34 +30,29 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0 # to use google fonts
-  geolocator: ^7.7.1
+  # geolocator: ^7.7.1
   animated_bottom_navigation_bar: ^1.3.0
-  curved_navigation_bar: ^1.0.3
-  # flutter_icons: ^1.1.0
+  # curved_navigation_bar: ^1.0.3
   flutter_screenutil: ^5.9.0
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # camera: ^0.10.5+9
   url_launcher: ^6.0.0
-  cupertino_icons: ^1.0.6
+  # cupertino_icons: ^1.0.6
   http: ^1.1.2
-  shared_preferences: ^2.2.2
-  flutter_html: ^3.0.0-beta.2
-  intl: ^0.18.1
-  select_form_field: ^2.2.0
-  file_picker: ^6.1.1
+  shared_preferences: ^2.2.0
+  # flutter_html: ^3.0.0-beta.2
+  # intl: ^0.18.1
+  # select_form_field: ^2.2.0
+  # file_picker: ^6.1.1
   path_provider: ^2.1.2
-  video_player: ^2.8.2
-  image_picker: ^1.0.7
-  location: ^4.4.0
-  provider: ^6.1.1
-  webview_flutter: ^2.3.0
+  # video_player: ^2.8.2
+  location: ^5.0.3
+  # image_picker: ^1.0.7
+  # webview_flutter: ^2.3.0
+  google_maps_flutter: ^2.2.0
   flutter_localizations:
     sdk: flutter
-  # downloads_path_provider_28: ^0.1.2
-  # downloads_path_provider: ^0.1.0
-  # permission_handler: ^10.0.0
   permission_handler: ^11.0.0
-  google_maps_flutter: ^2.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -92,7 +87,6 @@ flutter:
   assets:
     - assets/images/
     - assets/images/auth/
-    - assets/images/ambulance-top.png
 
   # fonts:
   #   - family: Schyler
